2022-08-29T00:34:32Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2945149436
* notice: last 14d: unq all: 43 5232
* notice: prev accum: outdated-unq outdated-all / unq all: 878 53518 / 972 58678
* notice: next accum: outdated-unq outdated-all / unq all: 898 53919 / 995 59151
* notice: prev exec diff / last date diff / accum: unq all: +13 +169 -2 -29 / +15 +400 -0 -0 / 15 400
* notice: removed / changed dates: [2022-08-14] / [2022-08-15 2022-08-28]

2022-08-28T16:02:22Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2943669007
* notice: last 14d: unq all: 42 5160
* notice: prev accum: outdated-unq outdated-all / unq all: 878 53518 / 981 58718
* notice: next accum: outdated-unq outdated-all / unq all: 878 53518 / 972 58678
* notice: prev exec diff / last date diff / accum: unq all: +0 +109 -9 -149 / +2 +231 -0 -0 / 2 231
* notice: removed / changed dates: [] / [2022-08-14 2022-08-28]

2022-08-28T08:08:46Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2942272584
* notice: last 14d: unq all: 46 5200
* notice: prev accum: outdated-unq outdated-all / unq all: 878 53518 / 982 58758
* notice: next accum: outdated-unq outdated-all / unq all: 878 53518 / 981 58718
* notice: prev exec diff / last date diff / accum: unq all: +2 +124 -3 -164 / +2 +122 -0 -0 / 2 122
* notice: removed / changed dates: [] / [2022-08-14 2022-08-27 2022-08-28]

2022-08-28T00:33:38Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2941196964
* notice: last 14d: unq all: 47 5240
* notice: prev accum: outdated-unq outdated-all / unq all: 858 53091 / 963 58278
* notice: next accum: outdated-unq outdated-all / unq all: 878 53518 / 982 58758
* notice: prev exec diff / last date diff / accum: unq all: +0 +132 -0 -20 / +2 +362 -0 -0 / 2 362