@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-29T00:34:32Z",
-  "count" : 372,
+  "timestamp" : "2022-08-29T08:08:06Z",
+  "count" : 194,
   "count_minmax" : [ 153, 401 ],
-  "count_decinc" : [ -29, +401 ],
-  "uniques" : 14,
-  "uniques_minmax" : [ 14, 16 ],
-  "uniques_decinc" : [ -2, +16 ]
+  "count_decinc" : [ -207, +401 ],
+  "uniques" : 5,
+  "uniques_minmax" : [ 5, 16 ],
+  "uniques_decinc" : [ -11, +16 ]
 }
