@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-29T00:34:32Z",
-  "count" : 400,
-  "count_minmax" : [ 122, 400 ],
-  "count_decinc" : [ -0, +400 ],
+  "timestamp" : "2022-08-29T08:08:06Z",
+  "count" : 402,
+  "count_minmax" : [ 122, 402 ],
+  "count_decinc" : [ -0, +402 ],
   "uniques" : 15,
   "uniques_minmax" : [ 2, 15 ],
   "uniques_decinc" : [ -0, +15 ]
