@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-08-29T00:34:32Z",
+  "timestamp" : "2022-08-29T08:08:06Z",
   "count_outdated" : 53919,
   "uniques_outdated" : 898,
-  "count" : 59151,
-  "uniques" : 995,
+  "count" : 59121,
+  "uniques" : 998,
   "clones" : [
     {
       "timestamp": "2022-08-15T00:00:00Z",
-      "count": 372,
+      "count": 194,
       "count_minmax": [ 153, 401 ],
-      "uniques": 14,
-      "uniques_minmax": [ 14, 16 ]
+      "uniques": 5,
+      "uniques_minmax": [ 5, 16 ]
     },
     {
       "timestamp": "2022-08-16T00:00:00Z",
@@ -98,10 +98,17 @@
     },
     {
       "timestamp": "2022-08-28T00:00:00Z",
-      "count": 400,
-      "count_minmax": [ 122, 400 ],
+      "count": 402,
+      "count_minmax": [ 122, 402 ],
       "uniques": 15,
       "uniques_minmax": [ 2, 15 ]
+    },
+    {
+      "timestamp": "2022-08-29T00:00:00Z",
+      "count": 146,
+      "count_minmax": [ 146, 146 ],
+      "uniques": 12,
+      "uniques_minmax": [ 12, 12 ]
     }
   ]
 }
