@@ -1,11 +1,11 @@
 {
-  "count": 5232,
+  "count": 5202,
   "uniques": 43,
   "clones": [
     {
       "timestamp": "2022-08-15T00:00:00Z",
-      "count": 372,
-      "uniques": 14
+      "count": 194,
+      "uniques": 5
     },
     {
       "timestamp": "2022-08-16T00:00:00Z",
@@ -69,8 +69,13 @@
     },
     {
       "timestamp": "2022-08-28T00:00:00Z",
-      "count": 400,
+      "count": 402,
       "uniques": 15
+    },
+    {
+      "timestamp": "2022-08-29T00:00:00Z",
+      "count": 146,
+      "uniques": 12
     }
   ]
 }
