@@ -1,3 +1,11 @@
+2022-08-29T08:08:06Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2946932143
+* notice: last 14d: unq all: 43 5202
+* notice: prev accum: outdated-unq outdated-all / unq all: 898 53919 / 995 59151
+* notice: next accum: outdated-unq outdated-all / unq all: 898 53919 / 998 59121
+* notice: prev exec diff / last date diff / accum: unq all: +12 +148 -9 -178 / +12 +146 -0 -0 / 12 146
+* notice: removed / changed dates: [] / [2022-08-15 2022-08-28 2022-08-29]
+
 2022-08-29T00:34:32Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2945149436
 * notice: last 14d: unq all: 43 5232
